[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/SuccessMessage/SuccessMessage.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Success_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/Success.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/SuccessMessage/Next.gd" type="Script" id=5]
[ext_resource path="res://UI/Elements/MenuButton.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 4 )

[node name="SuccessMessage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.956055
margin_right = 0.956055
script = ExtResource( 1 )

[node name="BeaconLitMessage" type="ColorRect" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -233.424
margin_bottom = -133.424
color = Color( 0.482353, 0.368627, 0.796078, 1 )

[node name="Beacon" type="Label" parent="BeaconLitMessage"]
visible = false
margin_left = 110.757
margin_top = 27.5696
margin_right = 410.757
margin_bottom = 130.57
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.898039, 0.054902, 1 )
text = "Beacon"

[node name="BeaconNumber" type="Label" parent="BeaconLitMessage"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5543
margin_top = -34.8652
margin_right = 165.446
margin_bottom = 45.1348
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.309804, 1, 0.870588, 1 )
text = "99"
align = 1
valign = 1

[node name="Lit" type="Label" parent="BeaconLitMessage"]
visible = false
margin_left = 629.14
margin_top = 30.7855
margin_right = 779.14
margin_bottom = 80.7855
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.898039, 0.054902, 1 )
text = "lit"

[node name="Buttons" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Next" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 389.044
margin_top = 400.0
margin_right = 589.044
margin_bottom = 440.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
focus_neighbour_right = NodePath("../Exit")
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_hover = Color( 0.992157, 1, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 1, 0.952941, 0.270588, 1 )
text = "Next"
clip_text = true
align = 0
script = ExtResource( 5 )

[node name="Fate" parent="Buttons" instance=ExtResource( 6 )]
margin_left = 410.757
margin_top = 420.0
margin_right = 482.757
margin_bottom = 420.0
text = "Fate"
[connection signal="focus_entered" from="Buttons/Next" to="Buttons/Next" method="_on_Next_focus_entered"]
[connection signal="focus_exited" from="Buttons/Next" to="Buttons/Next" method="_on_Next_focus_exited"]
[connection signal="pressed" from="Buttons/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Buttons/Fate" to="." method="_on_Fate_pressed"]
